added header and footer sections

--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
     <title>Document</title>
 </head>
 <body>
+    <header>
+        <section>
+
+
+        </header>
+    </header>
+    <footer>
+        
+    </footer>
     
 </body>
 </html>
