--- a/index.html
+++ b/index.html
@@ -6,17 +6,21 @@
     <meta http-equiv="X-UA-Compatible" content="text/css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Restaurant Booking System</title>
 </head>
 <body>
+    <!-- Header -->
     <header>
-        <section>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+<div>
 
+</div>
 
         </header>
     </header>
     <footer>
-        
+
     </footer>
     
 </body>
