--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item"><a class="nav-link" href="#home">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#home">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#about">Menu</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#home">Bookings</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#about">Account</a></li>
                 </ul>
             </div>
 <div>
