added hero section html with welcome message

--- a/index.html
+++ b/index.html
@@ -27,11 +27,15 @@
                 </ul>
             </div>
 <div>
-
 </div>
+     </header>
+      <!-- Hero Section -->
+       <section id="hero" class="jumbotron text-center">
+        <div class="container">
+            <h1 class="display-4">Welcome to Tortellini Town</h1>
+        </div>
+       </section>
 
-        </header>
-    </header>
     <footer>
 
     </footer>
