--- a/index.html
+++ b/index.html
@@ -36,6 +36,13 @@
         </div>
        </section>
 
+<!-- About Section -->
+        <section id="about" class="py-5">
+    <div class="container">
+        <h2>About Us</h2>
+        <p class="lead">Traditional Italian Food</p>
+    </div>
+        </section>
     <footer>
 
     </footer>
