--- a/index.html
+++ b/index.html
@@ -48,8 +48,10 @@
             <div class="container">
                 <h2>Our Menu</h2>
                 <div class="row">
-
-                </div>
+                    <div class="col-md-3">
+                        <h3>Appetizers</h3>
+                        <p>Description of appetizers...</p>
+                    </div>
             </div>
          </section>
     <footer>
