added main course, desserts and beverages headings in menu html

--- a/index.html
+++ b/index.html
@@ -52,6 +52,18 @@
                         <h3>Appetizers</h3>
                         <p>Description of appetizers...</p>
                     </div>
+                    <div class="col-md-3">
+                        <h3>Main Courses</h3>
+                        <p>Description of main courses...</p>
+                    </div>
+                    <div class="col-md-3">
+                        <h3>Desserts</h3>
+                        <p>Description of desserts...</p>
+                    </div>
+                    <div class="col-md-3">
+                        <h3>Beverages</h3>
+                        <p>Description of beverages...</p>
+                    </div>
             </div>
          </section>
     <footer>
