added booking section including the form for entering date

--- a/index.html
+++ b/index.html
@@ -66,6 +66,17 @@
                     </div>
             </div>
          </section>
+         <!-- Booking Section -->
+         <section id="booking" class="py-5 bg-light">
+            <div class="container">
+                <h2>Book a Table</h2>
+                <form id="booking-form" class="needs-validation" novalidate>
+                    <div class="form-row">
+                        <div class="col-md-4 mb-3">
+                            <label for="date">Date:</label>
+                            <input type="date" class="form-control" id="date" name="date" required>
+                            <div class="invalid-feedback">Please select a date.</div>
+                        </div>
     <footer>
 
     </footer>
