added form for number of guests added class for invalid feedback

--- a/index.html
+++ b/index.html
@@ -76,6 +76,17 @@
                             <input type="date" class="form-control" id="date" name="date" required>
                             <div class="invalid-feedback">Please select a date.</div>
                         </div>
+                        <div class="col-md-4 mb-3">
+                            <label for="time">Time:</label>
+                            <input type="time" class="form-control" id="time" name="time" required>
+                            <div class="invalid-feedback">Please select a time.</div>
+                        </div>
+                        <div class="col-md-4 mb-3">
+                            <label for="guests">Number of Guests:</label>
+                            <input type="number" class="form-control" id="guests" name="guests" min="1" max="20" required>
+                            <div class="invalid-feedback">Please enter a valid number of guests.</div>
+                        </div>
+                    </div>
     <footer>
 
     </footer>
