--- a/index.html
+++ b/index.html
@@ -86,6 +86,8 @@
                             <input type="number" class="form-control" id="guests" name="guests" min="1" max="20" required>
                             <div class="invalid-feedback">Please enter a valid number of guests.</div>
                         </div>
+                        <button type="submit" class="btn btn-primary">Check Availability</button>
+            </form>
                     </div>
     <footer>
 
