added logo image to html. may need resizing

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- Header -->
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="#"><img src="logo.png" alt="Restaurant Logo"></a>
+            <a class="navbar-brand" href="assests/images/tt-logo.png"><img src="assests/images/tt-logo-3.png" alt="Restaurant Logo"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
