--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
         <p class="lead">Traditional Italian Food</p>
     </div>
         </section>
+        
         <!-- Menu Section -->
          <section id="menu" class="py-5">
             <div class="container">
@@ -87,8 +88,9 @@
                             <div class="invalid-feedback">Please enter a valid number of guests.</div>
                         </div>
                         <button type="submit" class="btn btn-primary">Check Availability</button>
-            </form>
+                </form>
                     </div>
+         </section>
     <footer>
 
     </footer>
