--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXlLv0YyjTMST1pR2u7rJ9aFf3w19P8PJjNfDgU3vWIB8jq9T6yIjVBY2hKh" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js" integrity="sha384-+YQ4dvvYQANH6nY5yxqTwVXJDbQXrjfqR3oPHf7rQNbu3oXRM/rjq+cu9JJn8MK6" crossorigin="anonymous"></script>
-    <script src="scripts.js"></script>
+    <script src="script.js"></script>
     </footer>
     
 </body>
