added sbout us text to landing page

--- a/index.html
+++ b/index.html
@@ -39,7 +39,13 @@
         <section id="about" class="py-5">
     <div class="container">
         <h2>About Us</h2>
-        <p class="lead">Traditional Italian Food</p>
+        <p class="lead">An authentic Italian meal does more than nourish the body, it inspires the soul, bringing people and families together around ideas, laughter and love.
+
+While authentic Italian cooking is at the heart of Tortellini Town, in particular, the pizzas are baked in a proper wood-fired oven, we have also taken care to create an elegant and inviting décor to complete the experience.
+
+Once you have tasted a proper Italian pizza, baked in a proper, wood-fired oven, nothing else will do. In Tortellini Town, our pizzas are handmade daily in-house by our team of chefs using a blend of carefully selected Italian flour, hand stretched and topped with only the finest ingredients, we then bake them to mouth-watering perfection in our traditional Italian wood-fired pizza oven.
+
+Our menu is a tour of culinary Italy, taking in several classic regional dishes and some less well-known specialities that took our fancy. And of course, the other gift from Italy’s regions is the exquisite range of wines on offer, most of which are represented in The Italian Kitchen’s wine selection.</p>
     </div>
         </section>
         
