added appitizers html text

--- a/index.html
+++ b/index.html
@@ -56,7 +56,11 @@ Our menu is a tour of culinary Italy, taking in several classic regional dishes 
                 <div class="row">
                     <div class="col-md-3">
                         <h3>Appetizers</h3>
-                        <p>Description of appetizers...</p>
+                        <ul>
+                            <li>Bruschetta - Grilled bread topped with fresh tomatoes, garlic, basil, and olive oil</li>
+                            <li>Caprese Salad - Fresh mozzarella, tomatoes, and basil drizzled with balsamic reduction</li>
+                            <li>Fried Calamari - Lightly breaded and fried, served with marinara sauce</li>
+                            <li>Garlic Bread - Crispy bread topped with garlic butter and parsley</li>
                     </div>
                     <div class="col-md-3">
                         <h3>Main Courses</h3>
