added mains, desserts and beverages in unorderded lists

--- a/index.html
+++ b/index.html
@@ -64,15 +64,30 @@ Our menu is a tour of culinary Italy, taking in several classic regional dishes 
                     </div>
                     <div class="col-md-3">
                         <h3>Main Courses</h3>
-                        <p>Description of main courses...</p>
+                        <ul>
+                            <li>Margherita Pizza - Classic pizza with fresh tomatoes, mozzarella cheese, and basil</li>
+                            <li>Spaghetti Carbonara - Spaghetti pasta with creamy sauce, pancetta, and Parmesan cheese</li>
+                            <li>Chicken Parmesan - Breaded chicken breast topped with marinara sauce and melted cheese, served with pasta</li>
+                            <li>Lasagna Bolognese - Layers of pasta, rich meat sauce, and creamy béchamel, baked to perfection</li>
+                        </ul>
                     </div>
                     <div class="col-md-3">
                         <h3>Desserts</h3>
-                        <p>Description of desserts...</p>
+                        <ul>
+                            <li>Tiramisu - Classic Italian dessert with layers of coffee-soaked ladyfingers and mascarpone cream</li>
+                            <li>Panna Cotta - Creamy Italian dessert served with a berry compote</li>
+                            <li>Gelato - Assorted flavors of traditional Italian ice cream</li>
+                            <li>Cannoli - Crispy pastry shells filled with sweet ricotta cheese and chocolate chips</li>
+                        </ul>
                     </div>
                     <div class="col-md-3">
                         <h3>Beverages</h3>
-                        <p>Description of beverages...</p>
+                        <ul>
+                            <li>Espresso - Rich and strong Italian coffee</li>
+                            <li>Cappuccino - Espresso with steamed milk and a thick layer of foam</li>
+                            <li>Italian Soda - Refreshing soda with flavors of your choice</li>
+                            <li>Chianti - A classic red wine from the Tuscany region</li>
+                        </ul>
                     </div>
             </div>
          </section>
