--- a/index.html
+++ b/index.html
@@ -118,6 +118,19 @@ Our menu is a tour of culinary Italy, taking in several classic regional dishes 
                     </div>
          </section>
     <footer>
+
+        <div class="container text-center py-4">
+            <h5>Follow Us</h5>
+            <div class="social-links">
+                <a href="https://www.instagram.com/yourprofile" target="_blank" aria-label="Instagram">
+                    <i class="fab fa-instagram"></i>
+                </a>
+                <a href="https://www.facebook.com/yourprofile" target="_blank" aria-label="Facebook">
+                    <i class="fab fa-facebook"></i>
+                </a>
+            </div>
+        </div>
+        
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXlLv0YyjTMST1pR2u7rJ9aFf3w19P8PJjNfDgU3vWIB8jq9T6yIjVBY2hKh" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js" integrity="sha384-+YQ4dvvYQANH6nY5yxqTwVXJDbQXrjfqR3oPHf7rQNbu3oXRM/rjq+cu9JJn8MK6" crossorigin="anonymous"></script>
